[Add]genresの一覧画面

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,39 @@
   </head>
 
   <body>
+    <header class="shadow-sm">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+
+
+
+
+
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+       </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <ul class="navbar-nav ml-auto">
+
+       <% if admin_signed_in? %>
+      <li>
+        <%= link_to "ログアウト", admin_sign_out_path, method: :delete %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to "新規登録", customer_registration_path %>
+      </li>
+      <li>
+        <%= link_to "ログイン", customer_session_path %>
+      </li>
+    <% end %>
+
+         </ul>
+       </div>
+      </div>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
