--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>編集画面</h1>
 
-<%= form_with model: @genres do |f| %>
+<%= form_with model: @customer do |f| %>
 
   <h4>タイトル</h4>
   <%= f.text_field :title %>
