--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,13 +1,15 @@
 <h1>編集画面</h1>
 
-<%= form_with model: @item do |f| %>
+<%= form_with model:@item, url: edit_admin_item_path, method: :patch  do |f| %>
 
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
+  <h4>商品名</h4>
+  <%= f.text_field :name %>
 
-  <h4>本文</h4>
-  <%= f.text_area :body %>
+  <h4>商品説明文</h4>
+  <%= f.text_area :introduction %>
 
-  <%= f.submit '保存' %>
+  <h4>税抜き価格</h4>
+  <%= f.text_field :price %>
 
+  <%= f.submit '編集' %>
 <% end %>
