--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,7 +2,15 @@
 
 <% @item.each do |item| %>
 
-  <p>タイトル</p>
-  <span><%= item.title %></span>
+  <p>商品名</p>
+  <span><%= item.name %></span>
+
+  <p>商品説明文</p>
+  <span><%= item.introduction %></span>
+
+  <p>税抜き価格</p>
+  <span><%= item.price %></span>
+
+  <span><% redirect_to admin_item__path(item.id) %> </span>
 
 <% end %>
