[Finish]管理者topページ作成

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,5 +1,29 @@
-<h2>タイトル</h2>
-<p><%= @customer.title %></p>
+ <%= form_with model:@customer, url: admin_customer_path, method: :post  do |f| %>
 
-<h2>本文</h2>
-<p><%= @customer.body %></p>
+ <h4>会員ID</h4>
+  <%= f.text_field :customer_id %>
+
+  <h4>氏名</h4>
+  <%= f.text_area :last_name, :first_name %>
+
+  <h4>フリガナ</h4>
+  <%= f.text_field :last_name_kana, :first_name_kana %>
+
+  <h4>郵便番号</h4>
+  <%= f.text_field :postal_code %>
+
+  <h4>住所</h4>
+  <%= f.text_field :address %>
+
+  <h4>電話番号</h4>
+  <%= f.text_field :telephone_number %>
+
+  <h4>メールアドレス</h4>
+  <%= f.text_field :email %>
+
+  <h4>会員ステータス</h4>
+  <%= f.text_field :customer_id %>
+
+  <%= f.submit '編集する', edit_admin_customer_path(@customer.id) %>
+  <%= f.submit '注文履歴一覧を見る', admin_order_path(@order.id) %>
+  <% end %>
