--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,13 +1,8 @@
-<h1>ジャンル一覧</h1>
+<h1>ジャンル編集</h1>
 
-<% @genres.each do |genres| %>
 
-  <p>ジャンル</p>
-  <span><%= genres.name %></span>
 
-<% end %>
-
-<%= form_with model:@item, url: edit_admin_item_path, method: :patch  do |f| %>
+<%= form_with model:@genre, url: edit_admin_genre_path, method: :patch  do |f| %>
 
  <h4>ジャンル</h4>
   <%= f.text_field :name %>
