--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,13 +1,35 @@
-<h1>編集画面</h1>
+
 
 <%= form_with model: @customer do |f| %>
 
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
+　<h1>会員情報編集</h1>
 
-  <h4>本文</h4>
-  <%= f.text_area :body %>
+  <h4>会員ID</h4>
+  <%= f.text_field :customer_id %>
 
-  <%= f.submit '保存' %>
+  <h4>氏名</h4>
+  <%= f.text_field :last_name %>  <%= f.text_field:first_name %>
+
+  <h4>フリガナ</h4>
+  <%= f.text_field :last_name_kana, %>  <%= f.text_field:first_name_kana %>
+
+  <h4>郵便番号</h4>
+  <%= f.text_field :postal_code %>
+
+  <h4>住所</h4>
+  <%= f.text_area :address %>
+
+  <h4>電話番号</h4>
+  <%= f.text_field :telephone_number %>
+
+  <h4>メールアドレス</h4>
+  <%= f.text_field :email %>
+
+  <h4>会員ステータス</h4>
+
+
+
+
+  <%= f.submit '変更を保存' %>
 
 <% end %>
